stop overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,14 +12,12 @@ body, html {
 }
 
 #menu-container {
-    position:absolute;
+    position:inherit;
     top: 35px;
     left: 0;
     right: 0;
-    display: block;
     padding-top:15px;
     padding-bottom:10px;
-    margin-top:0px;
     margin-left: auto;
     margin-right: auto;
     width: auto;
@@ -45,35 +43,30 @@ a:hover, a:active { text-decoration: none; color: #fff}
 }
 
 #logo-container {
-    display:block;
     position: absolute;
     max-width: 400px;
     text-align:center;
     margin-left: auto;
     margin-right: auto;
-    top: 50%; left: 50%;
+    top: 51%; left: 50%;
     transform: translate(-50%,-50%);
 }
 
 img {
-    display:block;
+
+display:block;
 max-width:100%;
 max-height:100%;
 height: auto;
-    width: auto;
-}
-
-#page-container  {
-    width: 100vh;
-    margin: 0 auto; 
+width: auto;
 }
 
 #container {
     display:block;
   position: relative;
-  height: 100vh;
-  width: 100vh;
-  min-height: 350px;
+   height: 100vh;
+  width: 100wh;
+  min-height: 550px;
     min-width: 350px;
 }
 
